[tool.poetry]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
authors = ["you"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
discord-py = ">=2.6.4"
python-dotenv = ">=1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
